--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "19cf4042-a581-4fdb-acee-f4d5765164c5"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
@@ -67,6 +70,7 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
+            
             "production": {
               "browserTarget": "tabela:build:production"
             },
